[tool.poetry]
name = "scopeplot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
scipy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
